--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
         history: true,
+        controlsTutorial: false,
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
